--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -348,7 +348,7 @@
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
-  overflow-y: none;
+  overflow-y: hidden;
 }
 
 .tituloNav{
@@ -764,88 +764,88 @@ height: 70%;
 }
 
 .dibujoBonito{
-  border: 2px solid firebrick;
-  height: 39vh;
-  width: 32%;
+  /* border: 2px solid firebrick; */
+  height: 41vh;
+  width: 28%;
   position: relative;
   /*; cambiar a -7vh */
   top: -8vh;
   display: flex;
 }
 
-.paredIzq{
+.paredIzq, .paredIzq2, .paredIzq3{
   height: 80%;
   width: 60%;
   background-color: #CFF5FF;
-  clip-path: polygon(0 0, 75% 15%, 75% 100%, 0 85%);
   position: absolute;
   bottom: 0;
+
+}
+
+.paredIzq{
+  clip-path: polygon(0 0, 75% 15%, 75% 100%, 0 85%);
 }
 
 .paredIzq2{
-  height: 80%;
-  width: 60%;
-  background-color: #CFF5FF;
-  clip-path: polygon(0 0, 75% 15%, 75% 100%, 0 85%);
-  position: absolute;
-  bottom: 0;
+  clip-path: polygon(0 20%, 75% 35%, 75% 100%, 0 85%);
+  z-index: 1001;
 }
 
-.paredDer{
+.paredIzq3{
+  clip-path: polygon(0 0, 75% 12%, 75% 100%, 0 85%);
+  height: 100%;
+}
+
+.paredDer,.paredDer2,.paredDer3{
   height: 80%;
   width: 50%;
   background-color: #3491A8;
   position: absolute;
   bottom: 0;
+  left: 45%;
+}
+.paredDer{
   -webkit-clip-path: polygon(0 15%, 75% 2%, 75% 85%, 0 100%);
   clip-path: polygon(0 15%, 75% 2%, 75% 85%, 0 100%);
-  left: 45%;
 }
 
 
 .paredDer2{
-  height: 80%;
-  width: 50%;
-  background-color: #3491A8;
-  position: absolute;
-  bottom: 0;
   -webkit-clip-path: polygon(0 15%, 75% 2%, 75% 85%, 0 100%);
-  clip-path: polygon(0 15%, 75% 2%, 75% 85%, 0 100%);
-  left: 45%;
+  clip-path: polygon(0 35%, 75% 22%, 75% 85%, 0 100%);
+  z-index: 1001;
 }
 
-.techo{
-  clip-path: polygon(0 85%, 37% 75%, 75% 87%, 41% 100%);
+
+.paredDer3{
+  clip-path: polygon(0 12%, 75% 1%, 75% 85%, 0 100%);
+  height: 100%;
+}
+
+.techo,.techo2,.techo3{
   height: 80%;
   width: 109%;
   background-color: #82D4E8;
   position: absolute;
   bottom: 69%;
   z-index: 1000;
-
+}
+.techo{
+  clip-path:polygon(0 85%, 35% 73%, 75% 87%, 41% 100%);
 }
 
 .techo2{
-  clip-path: polygon(0 85%, 37% 75%, 75% 87%, 41% 100%);
-  height: 80%;
-  width: 109%;
-  background-color: #82D4E8;
-  position: absolute;
-  bottom: 69%;
+  clip-path: polygon(0 85%, 35% 72%, 75% 87%, 41% 100%);
+  bottom: 53%;
+  z-index: 1001;
+}
+
+.techo3{
+  clip-path:polygon(0 85%, 35% 73%, 75% 87%, 41% 100%);
   z-index: 1000;
-
+  bottom: 89%;
 }
 
-.paredDer2{
-  height: 80%;
-  width: 50%;
-  background-color: #3491A8;
-  position: absolute;
-  bottom: 0;
-  -webkit-clip-path: polygon(0 15%, 75% 2%, 75% 85%, 0 100%);
-  clip-path: polygon(0 15%, 75% 2%, 75% 85%, 0 100%);
-  left: 45%;
-}
 
 
 /* height: 31vh;
