--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -349,6 +349,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .tituloNav{
@@ -603,7 +604,7 @@ height: 70%;
 .obrasCiviles{
   height: 420vh;
   width: 100%;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   flex-direction: column;
 }
@@ -611,7 +612,7 @@ height: 70%;
 .obraTipo{
   height: 70vh;
   width: 100%;
-  border: 2px solid orange;
+  /* border: 2px solid orange; */
   display: flex;
   flex-direction: row;
 }
@@ -621,30 +622,45 @@ height: 70%;
 .obraImagen{
   width: 50%;
   height: 100%;
-  border: 2px solid darkslategrey;
+  /* border: 2px solid darkslategrey; */
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  background-image: url(/img/ObraEjemplo.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #001124;
 }
 
 .obraImagenInverse{
   width: 50%;
   height: 100%;
-  border: 2px solid darkslategrey;
+  /* border: 2px solid darkslategrey; */
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: flex-end;
+  background-image: url(/img/ObraEjemplo.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #001124;
+  transform: scaleX(-1);
 }
 
-.obraDescripcion{
+.obraDescripcion, .obraDescripcionInverse{
   width: 50%;
   height: 100%;
-  border: 2px solid seagreen;
+  /* border: 2px solid seagreen; */
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
 }
 
+.obraDescripcionInverse{
+  justify-content:start;
+  align-items: center;
+}
 
 
 .imagenEspacio, .imagenEspacioInverse{
@@ -670,9 +686,9 @@ height: 70%;
 }
 
 .obraTexto{
-  width: 90%;
+  width: 80%;
   height: 70%;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .textoObraTitulo{
@@ -693,14 +709,14 @@ height: 70%;
 .contacto{
   height: 80vh;
   width: 100%;
-  border: 2px solid #001124;
+  /* border: 2px solid #001124; */
   background-color: #065569ff;
 }
 
 .contactoInfo{
   width: 100%;
   height: 60%;
-  border: 2px solid steelblue;
+  /* border: 2px solid steelblue; */
   display: flex;
   align-items: flex-end;
 }
@@ -708,34 +724,34 @@ height: 70%;
 .horarios{
  width: 50%;
  height: 90%;
- border: 2px solid red;
- padding: 4vh 7vh;
+ /* border: 2px solid red; */
+ padding: 7vh 0vh 7vh 27vh;
 
 }
 
 .horariosFecha{
-  border: 2px solid pink;
+  /* border: 2px solid pink; */
   display: flex;
 }
 
 .horariosDia{
   width: 50%;
-  border: 2px solid pink;
+  /* border: 2px solid pink; */
 }
 .horariosHora{
   width: 50%;
-  border: 2px solid pink;
+  /* border: 2px solid pink; */
 }
 
 .info{
   width: 50%;
   height: 90%;
-  border: 2px solid red;
-  padding: 4vh 7vh;
+  /* border: 2px solid red; */
+  padding: 7vh 7vh;
 }
 
 .horariosH2{
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   margin-bottom: 10px;
 }
 
@@ -753,11 +769,11 @@ height: 70%;
 .redesSociales{
   width: 100%;
   height: 40%;
-  border: 2px solid green;
+  /* border: 2px solid green; */
 }
 
 .contenedorIcono{
-  border: 2px solid hotpink;
+  /* border: 2px solid hotpink; */
   height: 100%;
   width:  9vh;
   margin: 0 2px;
@@ -846,6 +862,14 @@ height: 70%;
   bottom: 89%;
 }
 
+.wasapIcon{
+  width: 10%;
+  /* border: 2px solid blue; */
+  height: 9.6vh;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+}
 
 
 /* height: 31vh;
