--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -177,9 +177,11 @@
   }
 
   .mainFooter2{
-    bottom: -0.2%;
-    position: relative;
-    height: 2%;
+        /* bottom: -4.2%; */
+        position: absolute;
+        /* border: 2px solid red; */
+        height: 5%;
+        top: 456vh;
   }
   
   .cardIntroduccion{
@@ -276,8 +278,8 @@
   .tituloNav{
     height: 65px;
     width: 100%;
-    background: rgb(255,255,255);
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.194) 0%, rgba(255, 255, 255, 0.108) 50%, rgba(255,255,255,0) 100%);
+    background-color: #ffffff8e;
+    box-shadow: 2px -3px 20px #2f2e2e7a;
     padding: 0;
     display: flex;
     position: fixed;
@@ -309,6 +311,7 @@
     align-items: center;
     margin-left: 1%;
     transition: color 0.5s ease;
+    color:#065569ff;
   }
   
   .tituloTitulo.scrolled{
@@ -320,7 +323,7 @@
     height: 100%;
     width: 60%;
     /* border: 2px solid green; */
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content: flex-end;
   }
@@ -375,7 +378,7 @@
   
   
   .vista2{
-    height: 400vh;
+    height: 300vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -401,6 +404,8 @@
    font-family: var(--font-aleo);
    letter-spacing: -1px;
    font-weight: bolder;
+   margin-bottom: 15vh;
+
   }
   
   .vista2Servicios{
@@ -424,7 +429,7 @@
   
   .servicioIcono{
     width: 100%;
-    height: 20%;
+    height: 17%;
     /* border: 2px solid greenyellow; */
     display: flex;
     justify-content: center;
@@ -433,7 +438,7 @@
   
   .vista2Servicio{
     /* border: 2px solid rgb(0, 255, 115); */
-    height: 80%;
+    height: 85%;
     width: 100%;
     display: flex;
     border-radius: 15px;
@@ -462,10 +467,6 @@
     border-radius: 15px 15px 0 0;
   }
   
-  
-  
-  
-  
   .servicioDescripcion{
     width: 100%;
     background-color: #004ea70f;
@@ -473,8 +474,6 @@
     flex-direction: column;
     justify-content: center;
   }
-  
-  
   
   .descripcionH2{
     color: #ffffff;
@@ -523,7 +522,7 @@
   }
   
   .servicioContenedor{
-    height: 26%;
+    height: 21%;
     width: 90%;
     display: flex;
     flex-direction: column-reverse;
@@ -561,7 +560,7 @@
     width: 100%;
     /* border: 2px solid red; */
     /* display: flex; */
-    display: none;
+    display: flex;
     flex-direction: column;
   }
   
@@ -634,7 +633,6 @@
     justify-content:start;
     align-items: center;
   }
-  
   
   .imagenEspacio, .imagenEspacioInverse{
     clip-path: polygon(0 0%, 100% 12%, 100% 88%, 0% 100%);
@@ -733,6 +731,25 @@
     margin-bottom: 14px;
   }
   
+  .contenedorVacio{
+    width: 40%;
+    height: 100%;
+    display:flex;
+  }
+
+  .contenedorRedesVacio{
+    width:80%; 
+    height:30%;
+    display:flex;
+    justify-content: flex-end;
+  }
+
+  .contenedorRedes{
+    width: 50%; 
+    height:100%;
+    display:flex; 
+    align-items:flex-end;
+  }
   .iconosContactos{
     display: flex;
     flex-direction: column;
@@ -850,9 +867,6 @@
     width: 10%;
     /* border: 2px solid blue; */
     height: 9.6vh;
-    position: fixed;
-    right: 0;
-    bottom: 0;
   }
   
   
@@ -1042,6 +1056,11 @@
     background-color: #065569ff;
     clip-path: polygon(100% 100%, 100% 100%, 10% 10%, -5% 100%, 100% 100%, 80% 80%, 100% 10%, 100% 100%);
   }
+
+  .mainFooter2{
+    position: relative;
+    bottom: -10%;
+  }
   
   .cardIntroduccion{
     width: 80%;
@@ -1074,6 +1093,11 @@
     letter-spacing: -2px;
   }
 
+  .introduccionTexto21{
+    font-size:6vh;
+    position: relative;
+    top: -9%
+  }
   
   
   .introduccionFlecha{
@@ -1253,7 +1277,7 @@
     display: flex;
     flex-direction: column;
     height: 90%;
-    justify-content: space-between;
+    justify-content: center;
   }
   
   .vista2ServiciosFila{
@@ -1672,7 +1696,26 @@
     z-index: 1000;
     bottom: 89%;
   }
-  
+
+  .contenedorRedes{
+    width: 50%; 
+    height:100%;
+    display:flex; 
+    align-items:flex-end;
+  }
+  .contenedorVacio{
+    width: 50%;
+    height: 100%;
+    display:flex;
+  }
+
+  .contenedorRedesVacio{
+    width:80%; 
+    height:30%;
+    display:flex;
+    justify-content: flex-end;
+  }
+
   .wasapIcon{
     width: 10%;
     /* border: 2px solid blue; */
