--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -127,7 +127,66 @@
 }
 
 /* Mobile */
+
 @media (max-width: 700px) {
+
+  .filterMenu{
+    position: fixed;
+    /* border: 2px solid red; */
+    height: 100vh;
+    width: 100%;
+    right: -65vh;
+    z-index: 2000;
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .filterMenu.scrolled{
+    right: 0;
+  }
+
+  .menu{
+    /* border: 2px solid red; */
+    height: 100vh;
+    width: 50%;
+    background-color: #065569;
+    box-shadow: -4px -1px 10px #2f2e2ee0;
+  }
+
+  .divMenu{
+    height: 10%;
+    width: 100%;
+    border-bottom: 1px solid white;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 1px;
+  }
+
+  .exitMenu{
+    /* border: 2px solid yellow; */
+    height: 100%;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .obrasCivilesMobile{
+    height: 100vh;
+    width: 100%;
+    /* border: 2px solid orange; */
+    display: flex;
+    flex-direction: column-reverse;
+    transition: top 1s ease;
+    align-items: center;
+    justify-content: center;
+    border-radius: 12px;
+    overflow-x: hidden;
+
+  }
+
   .vistaPrincipal{
     /* border: 2px solid red; */
     height: 100vh;
@@ -232,6 +291,8 @@
     letter-spacing: -2px;
     padding: 0 5px;
     height: 60%;
+    display: flex;
+    align-items: center;
   }
 
   .introduccionFlecha{
@@ -251,7 +312,7 @@
     height: 10%;
     top: 46%;
     width: 6%;
-    display: flex;
+    display: none;
     right: 0;
   }
   
@@ -278,8 +339,8 @@
   .tituloNav{
     height: 65px;
     width: 100%;
-    background-color: #ffffff8e;
-    box-shadow: 2px -3px 20px #2f2e2e7a;
+    /* background-color: #065569; */
+    /* box-shadow: 2px -3px 20px #2f2e2e7a; */
     padding: 0;
     display: flex;
     position: fixed;
@@ -287,6 +348,7 @@
     z-index: 1000;
     overflow-y: hidden;
     transition: background-color 0.5s ease;
+    justify-content: space-between;
   
   }
   
@@ -304,14 +366,14 @@
   }
   
   .tituloTitulo{
-    /* border: 2px solid red; */
-    height: 100%;
-    width: 30%;
-    display: flex;
-    align-items: center;
-    margin-left: 1%;
-    transition: color 0.5s ease;
-    color:#065569ff;
+        /* border: 2px solid red; */
+        height: 100%;
+        width: 60%;
+        display: flex;
+        align-items: center;
+        margin-left: 1%;
+        transition: color 0.5s ease;
+        color: rgb(240, 240, 240);
   }
   
   .tituloTitulo.scrolled{
@@ -337,6 +399,15 @@
     transition: background-color 0.5s ease, color 0.2s ease, box-shadow 0.5s ease, margin 0.5s ease;
   
     
+  }
+
+  .navSegmentosMobile{
+    /* border: 2px solid red; */
+    height: 100%;
+    width: 18%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   .segmento:hover{
@@ -560,49 +631,73 @@
     width: 100%;
     /* border: 2px solid red; */
     /* display: flex; */
-    display: flex;
+    display: none;
     flex-direction: column;
   }
   
-  .obraTipo{
-    height: 70vh;
-    width: 100%;
-    /* border: 2px solid orange; */
+  .obraTipo, .obraTipo2{
+    height: 84vh;
+    width: 85%;
+    border: 1px solid #0655693d;
     display: flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
     transition: top 1s ease;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 2px 3px 10px rgb(146, 146, 146);
+    border-radius: 12px;
+    background-color: white;
   
   }
-  
+
+  .obraTipo{
+    position: absolute;
+    left: -100%;
+  }
+
   .obraTipo.scrolled{
-    height: 70vh;
-    width: 100%;
-    /* border: 2px solid orange; */
-    display: flex;
-    flex-direction: row;
+    position: absolute;
+    left: 7%;
   }
+
+  .obraTipo2{
+    position: absolute;
+    /* border: 2px solid red; */
+    width: 85%;
+    left: -100%; /* to auto */
+  }
+
+  .obraTipo2.scrolled{
+    position: absolute;
+    /* border: 2px solid red; */
+    width: 85%;
+    left: 7%
+  }
+  
+
   
   .obraFilter{
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: white;
+    /* background-color: white; */
     z-index: 300;
     transition: background-color 2s ease;
   }
   
   
   .obraImagen{
-    width: 50%;
-    height: 100%;
+    width: 90%;
+    height: 30%;
     /* border: 2px solid darkslategrey; */
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     background-image: url(/img/rediseñoObras.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-bottom: 5%;
   }
   
   .obraImagenInverse{
@@ -621,12 +716,12 @@
   }
   
   .obraDescripcion, .obraDescripcionInverse{
-    width: 50%;
-    height: 100%;
+    width: 100%;
+    height: 65%;
     /* border: 2px solid seagreen; */
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-start;
   }
   
   .obraDescripcionInverse{
@@ -670,9 +765,9 @@
   
   .textoObraDescripcion{
     color: #000000;
-    height: 90%;
+    height: 100%;
     padding-top: 25px;
-    font-size: 3vh;
+    font-size: 2.2vh;
     letter-spacing: 0.4px;
     font-weight: 400;
   }
@@ -992,6 +1087,18 @@
 
 /* PC Desing */
 @media (min-width: 700px) {
+
+  .menu{
+    display: none;
+  }
+
+  .navSegmentosMobile{
+    display: none;
+  }
+
+  .obrasCivilesMobile{
+    display: none;
+  }
 
   .introduccionTexto12{
     font-size:50px;
